# kmid2_kf5

./: CMakeLists.txt  README  configure.sh
alsa/: CMakeLists.txt  alsabackend.cpp  alsabackend.h  alsamidiobject.cpp  alsamidioutput.cpp  externalsoftsynth.cpp  externalsoftsynth.h  player.cpp  song.cpp
dummy/: CMakeLists.txt
icons/: CMakeLists.txt
src/: CMakeLists.txt  channels.cpp  kmid2.cpp  kmid2.h  kmid_part.cpp  kmid_part.h  kmid_partview.cpp  kmid_partview.h  main.cpp  org.kde.KMid.xml  pianola.cpp  playlistdialog.cpp  qt_kde.h
widgets/: pianokey.cpp  vumeter.cpp  vumeter.h
